--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.9.3"
+    "mongoose": "^6.9.3",
+    "vercel": "^28.16.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
