--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.3",
-    "vercel": "^28.16.7"
+    "mongoose": "^6.9.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
