--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_URI = mongodb+srv://admin:admin@cluster0.6rzjcgg.mongodb.net/test
+# DB_URI = mongodb+srv://admin:admin@cluster0.6rzjcgg.mongodb.net/test
+DB_URI = mongodb+srv://root:admin@cluster0.mo2edxb.mongodb.net/
 SECRET_JWT = da3478eeabec36d1c70f583d78a18c29
