--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/joseraldom/beepopi-api#readme",
   "dependencies": {
+    "aws-sdk": "^2.1395.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -26,7 +27,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.11.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
