--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # DB_URI = mongodb+srv://admin:admin@cluster0.6rzjcgg.mongodb.net/test
 DB_URI = mongodb+srv://root:admin@cluster0.mo2edxb.mongodb.net/
 SECRET_JWT = da3478eeabec36d1c70f583d78a18c29
-AWS_ACCESS_KEY_ID = AKIA2Q6NESZEZ27WOMFM
-AWS_SECRET_ACCESS_KEY = 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
+AWS_ACCESS_KEY_ID = AKIA2Q6NESZETCJEKGHK
+AWS_SECRET_ACCESS_KEY = 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
 AWS_DEFAULT_REGION = us-east-1
